fix hamburger menu toggle misalignment

--- a/_sass/includes/header.scss
+++ b/_sass/includes/header.scss
@@ -1,10 +1,12 @@
 .fa.fa-bars.active {
-    position: relative;
+    position: static;
+    display: block;
     float: right;
+    top: 0px;
+    right: 20px;
     font-size: 28px;
     text-align: bottom;
     transform: translateY(15%);
-    display: block;
     transition: .3s;
 }
 
@@ -14,13 +16,14 @@
 }
 
 .fas.fa-times.active {
-    position: relative;
+    position: static;
+    display: block;
     float: right;
+    right: 20px;
     font-size: 32px;
     text-align: bottom;
     transform: translate(-75%, 100%);
     color: black;
-    display: block;
     -webkit-text-stroke: 2px white;
     transition: .15s;
 
