--- a/_sass/root/styles.scss
+++ b/_sass/root/styles.scss
@@ -34,7 +34,7 @@ body {
   font: 16px/1.5 $main-font-family;
   color: $main-text-color;
   font-weight:400;
-  margin-bottom: 100px;
+  margin-bottom: 100px; //if footer disappears
 }
 
 
@@ -316,7 +316,7 @@ a {
   body {
     width: 100vw;
     height: 100vh;
-    padding: 30px 15px 100px;
+    padding: 30px 20px 100px;
     h1 { font-size: 1.75rem; }
     h2 { font-size: 1.5rem; }
     h3 { font-size: 1rem; }
